tests/fixtures/lua54/errors/unresolved_module/input/main.lua
local mod = require("nonexistent")

return mod
